source/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: hello-world-pod
    spec:
      containers:
        - image: asia.gcr.io/PROJECT_ID/my-project/hello-world
          imagePullPolicy: Always
          name: hello-world-pod
