source/pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-configmap
spec:
  containers:
    - image: asia.gcr.io/PROJECT_ID/my-project/hello-world
      imagePullPolicy: Always
      name: hello-world
