source/lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-lb-svc
spec:
  type: LoadBalancer
  selector:
    name: hello-world-pod
  ports:
  - port: 80
    targetPort: 8080
