source/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
spec:
  type: NodePort
  selector:
    name: hello-world-pod
  ports:
    - port: 8080
